# test-bcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  deploy-to-azure.sh  docker-compose.yml  nginx.conf
app/: main.py
app/agents/: __init__.py  base_agent.py  master_agent.py  parallel_executor.py
app/api/: endpoints.py
app/core/: database.py
app/models/: debt.py  payment.py
app/schemas/: __init__.py
app/services/: analysis_service.py  data_loader.py  debt_calculator.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base_agent.py  eligibility_agent.py  master_agent.py  parallel_executor.py
backend/app/api/: endpoints.py
backend/app/core/: database.py
backend/app/models/: __init__.py  customer.py  debt.py  payment.py
backend/app/schemas/: debt.py
backend/app/services/: analysis_service.py  data_loader.py  debt_calculator.py  enhanced_consolidation_service.py
backend/data/: cards.csv  payment_history.csv
data/: bank_offers.json  credit_score_history.csv  customer_cashflow.csv  loans.csv
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: FinancialAnalysisWizard.tsx  PaymentComparisonChart.tsx  StrategyReportModal.tsx
frontend/src/components/ui/: modal.tsx  progress.tsx  stepper.tsx
frontend/src/lib/: api.ts
